# ezclip

./: .env.example  .flake8  .gitignore  .pylintrc  Dockerfile  README.md  celery_worker.py  docker-compose.yml  encode_env_vars.sh  entrypoint.sh  firebase_init.py  init_env_files.py  init_env_files.sh  main.py  pyproject.toml
.github/: copilot-instructions.md
app/: __init__.py
app/clipping/: async_router.py  router.py  tasks.py
app/clipping/domain/: __init__.py  video_understanding.py
app/clipping/infrastructure/: __init__.py  ffmpeg_video_clipper.py  firebase_clip_url_repository.py  firebase_highlight_repository.py  gemini_video_understanding.py  moviepy_video_clipper.py  r2_storage.py  youtube_downloader.py
app/clipping/services/: __init__.py
app/clipping/use_cases/: __init__.py  clip_video.py
app/main/: app.py
tests/clipping/use_cases/: test_clip_video.py
